--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev --manual",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc"
+    "build": "webpack"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -45,7 +41,12 @@
     "remix-themes": "^1.3.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
-    "use-dark-mode": "^2.3.1"
+    "ts-loader": "^9.5.1",
+    "use-dark-mode": "^2.3.1",
+    "vite": "^5.3.3",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.7.1",
