--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "webpack"
+    "dev": "remix dev",
+    "build": "remix build",
+    "start": "remix start"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -44,7 +46,6 @@
     "ts-loader": "^9.5.1",
     "use-dark-mode": "^2.3.1",
     "vite": "^5.3.3",
-    "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "winston": "^3.13.1"
   },
@@ -63,8 +64,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.1.6"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
