--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "isbot": "^4.1.0",
     "lucide-react": "^0.379.0",
