--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-paystack": "^5.0.0",
     "remix-themes": "^1.3.1",
     "swr": "^2.2.5",
+    "systeminformation": "^5.23.5",
     "tailwind-merge": "^2.3.0",
     "ts-loader": "^9.5.1",
     "use-dark-mode": "^2.3.1",
