--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.379.0",
     "mini-svg-data-uri": "^1.4.4",
     "mock-aws-s3": "^4.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.2",
     "next-themes": "^0.2.1",
     "nock": "^13.5.4",
@@ -41,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-paystack": "^5.0.0",
+    "recharts": "^2.14.0",
     "remix-themes": "^1.3.1",
     "swr": "^2.2.5",
     "systeminformation": "^5.23.5",
